fix test wrapping issue with stage content; fix arrow display problem

--- a/ui/client/quickbase/assets/_layout.scss
+++ b/ui/client/quickbase/assets/_layout.scss
@@ -319,8 +319,7 @@
     }
 
     &.stage-open {
-      height: 200px;
-      min-height: 200px !important;
+      min-height: 205px !important;
     }
 
     &.stage-close {
