--- a/ui/client/quickbase/assets/_report.scss
+++ b/ui/client/quickbase/assets/_report.scss
@@ -1,5 +1,3 @@
-@import "icons";
-
 .report {
 
   min-width: 640px;
@@ -8,24 +6,30 @@
     .report-content {
       .left {
         float: left;
-        width: 70%;
+        width: 68%;
+        border-right: 1px solid $light-gray;
+        &.stage-closed {
+          border-right: 0px;
+        }
         div {
           margin-left: 40px;
+          margin-right: 30px;
           &.header {
             font-size: 22px;
-            height: 27px;
             font-family: "HelveticaNeueBold", Helvetica, Arial, sans-serif;
             color: $darker-gray;
+            line-height: 22px;
+            margin-top: 3px;
           }
           &.subheader {
-            margin-top: 3px;
+            margin-top: 7px;
             font-size: 14px;
             color: $slate;
             text-transform: inherit;
             font-family: "HelveticaNeueRoman", Helvetica, Arial, sans-serif;
           }
           &.content {
-            margin: 35px 60px 20px 0px;
+            margin: 35px 30px 35px 0px;
             font-family: "HelveticaNeueRoman", Helvetica, Arial, sans-serif;
             color: $darker-gray;
             font-size: 14px;
@@ -39,11 +43,7 @@
         width: 30%;
         .reminder {
           white-space: nowrap;
-          border-left: 1px solid $light-gray;
           padding: 1px 20px 15px 40px;
-          &.stage-closed {
-            border-left: 0px;
-          }
           .icon {
             width: 50px;
             height: 60px;
